bugs squashed; client working with 4A test